syntax = "proto3";
package io.velo.echo.proto;
option java_multiple_files = true;
option csharp_namespace = "ex.Basic.Proto";

message EchoRequest 
{
  string text = 1;
}

message EchoResponse 
{
  string text = 1;
}

message HelloResponse 
{
  string text = 1;
}

message AddRequest
{
  int32 a = 1;
  int32 b = 2;
}

message AddResponse
{
  int32 sum = 1;
}

message TestSignal 
{
  string text = 1;
}

message TestEvent
{
  string text = 1;
}
